# cfra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
bench/: bench.sh  bench_config.sh  plot_results.py
ci/: test.sh
data/test_data/java/avrora/: README.md  avrora.csv  grammar.cnf  grammar1.cnf  grammar1.cnf.expanded  grammar2.cnf  grammar_epsilone.cnf  old_grammar.cnf
src/: common.hpp  main.cpp
src/base_algo/: algo_factory_complete.hpp  base_algo.cpp  base_algo.hpp  base_matrix_algo.hpp  diagnostic_base_matrix_algo.hpp  fully_optimized_algo.hpp  incremental_matrix_algo.hpp  lazy_matrix_set.hpp  matrix_representation.hpp  optimization_config.hpp
src/cnf_grammar/: cnf_grammar.hpp  grammar_template_expander.hpp
src/grammar/: grammar.cpp  grammar.hpp
src/graph/: graph.cpp  graph.hpp
src/incremental_algo/: incremental_algo.cpp  incremental_algo.hpp
src/label_decomposed_graph/: label_decomposed_graph.hpp
src/lazy_algo/: chunked_store.cpp  chunked_store.hpp  lazy_algo.cpp  lazy_algo.hpp
src/matrix_store/: matrix_store.cpp  matrix_store.hpp
test_data/: result_an_bn.txt  result_transitive_loop.txt
test_data/an_bn/: expected.txt  grammar.cnf  graph.txt
test_data/binary_tree/: grammar.cnf  graph.txt
test_data/indexed_an_ab/: grammar.cnf.expanded  graph.txt
test_data/test_graph/: grammar.cnf  graph.txt
